# AudiobookGenPL

./: .env.example  .gitignore  Dockerfile  License  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
app/: main.py  worker.py
app/api/: routers.py  schemas.py
app/core/: config.py  tts_model.py
app/services/: audio_stitcher.py  epub_parser.py  pipeline.py  text_chunker.py
frontend/: app.py
scripts/: test_xtts.py
tests/: test_api.py  test_audio_stitcher.py  test_epub_parser.py  test_pipeline.py  test_text_chunker.py  test_tts_model.py
