[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epub_narrate"
version = "1.0.0"
description = "Local AI Audiobook Generator using XTTS-v2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn[standard]==0.32.0",
    "python-multipart>=0.0.18",
    "aiofiles==24.1.0",
    "pydantic>=2.11.10",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    "celery==5.4.0",
    "redis==5.1.1",
    "EbookLib==0.18",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "gradio>=6.0.0,<7.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
packages = ["app", "frontend"]